ongoing: class Image: IDE PatternWindow